<resources>
    <string name="app_name">Matchday</string>
    <string name="menu_addMatch">Add Match</string>
    <string name="hint_team">Team</string>
    <string name="button_addMatch">Add Match</string>
    <string name="button_updateMatch">Update Match</string>
    <string name="hint_date">Select date...</string>
    <string name="hint_time">Select time...</string>
    <string name="date_text">Date: </string>
    <string name="time_text">Time: </string>
    <string name="hint_result">Result</string>
    <string name="cupGame">Cup Game</string>
    <string name="leagueGame">League Game</string>
    <string name="homeTeam_text">Home Team</string>
    <string name="awayTeam_text">Away Game</string>
    <string name="menu_matches">Matches</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_delete">Delete</string>
    <string name="teams_validation_message">Please choose team</string>
    <string name="leagueOrCup_validation_message">Please choose league or cup game</string>
    <string name="button_saveMatch">Save Match</string>
    <string name="text_location">Location</string>
    <string name="hint_location">Set Location...</string>
    <string name="location_set">Location Set</string>
    <string name="location_updated">Location Updated</string>
    <string name="location_edit">Edit Location</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter your email</string>
    <string name="signup_validation_message">Please enter all user information</string>
    <string name="login_error_message">Login details are incorrect</string>
    <string name="prompt_password">Enter your password</string>
    <string name="action_sign_in">Log me in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="not_registered_user">Not a registered user?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="action_signup">Sign up</string>
    <string name="action_signup_link">Sign up</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_header">Login</string>
    <string name="signup_header">Signup</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="menu_about">About</string>

    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">User email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sign_out">Sign Out</string>

    <string name="action_about">About Us</string>
    <string name="match_detail">Match Details</string>
    <string name="match_date">Date</string>
    <string name="match_result">Result</string>
    <string name="match_title">Match Title</string>
    <string name="aboutus_title">We are a one man operation</string>
    <string name="aboutus_message">This app is the best for coaches. Please tell your friends</string>

    <string name="matches_not_found">Matches not found</string>
    <string name="add_match_error">Error: Unable to add match</string>
    <string name="match_details">Match Details</string>

    <string name="messageLoading">Please wait while the matches load...</string>
    <string name="select_profile_image">Select Profile Image</string>


    <string name="lorem_ipsum">
        Lorem ipsum
    </string>
    <string name="fragment_login_label">login_label</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="set_theme">Change Theme</string>
    <string name="choose_theme_text">Choose Theme</string>

    <string-array name="teams_array">
        <item>Select team</item>
        <item>Arsenal</item>
        <item>Burnley</item>
        <item>Bolton</item>
        <item>Chelsea</item>
        <item>Everton</item>
        <item>Liverpool</item>
        <item>Manchester Utd</item>
        <item>Manchester City</item>
        <item>West Ham</item>
    </string-array>

    <string-array name="score_home_array">
        <item>Home</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="score_away_array">
        <item>Away</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

</resources>