<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/addMatchFragment"
            android:icon="@drawable/baseline_add_circle_outline_24"
            android:title="@string/menu_addMatch"
            android:tint="?attr/colorControlNormal"
            />
        <item
            android:id="@+id/matchesFragment"
            android:icon="@drawable/baseline_list_24"
            android:title="@string/menu_matches" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/action_about" />
        <item android:title="User Profile">
            <menu>
                <item
                    android:id="@+id/signout"
                    android:icon="@android:drawable/ic_menu_revert"
                    android:onClick="signOut"
                    android:title="@string/sign_out" />
            </menu>
        </item>
    </group>
</menu>

