<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dip">

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:id="@+id/teams_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/homeTeam_text"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:hint="@string/homeTeam_text"
                    android:padding="8dp"
                    android:stateListAnimator="@null"
                    android:textSize="14sp" />


                <Spinner
                    android:id="@+id/homeTeam_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/awayTeam_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/awayTeam_text"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:hint="@string/awayTeam_text"
                    android:padding="8dp"
                    android:stateListAnimator="@null"
                    android:textSize="14sp" />


                <Spinner
                    android:id="@+id/awayTeam_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="14sp"/>
            </LinearLayout>

                <LinearLayout
                    android:id="@+id/resultLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/score_text"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="16dp"
                        android:hint="Score"
                        android:padding="8dp"
                        android:stateListAnimator="@null"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/home_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:textSize="14sp"/>


                    <Spinner
                        android:id="@+id/away_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:textSize="14sp"/>


                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/leagueGame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:checked="true"
                        android:text="@string/leagueGame" />

                    <RadioButton
                        android:id="@+id/cupGame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:text="@string/cupGame" />

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/dateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:id="@+id/dateText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="16dp"
                        android:hint="@string/date_text"
                        android:padding="8dp"
                        android:stateListAnimator="@null"
                        android:textSize="14sp" />

                    <Button
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:id="@+id/date"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_date"
                        android:textSize="14sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:id="@+id/timeText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="16dp"
                        android:hint="@string/time_text"
                        android:padding="8dp"
                        android:stateListAnimator="@null"
                        android:textSize="14sp" />

                    <Button
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:id="@+id/time"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_time"
                        android:textSize="14sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/locationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:id="@+id/locationText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="16dp"
                        android:hint="@string/text_location"
                        android:padding="8dp"
                        android:stateListAnimator="@null"
                        android:textSize="14sp" />

                    <Button
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:id="@+id/locationButton"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_location"
                        android:textSize="14sp"/>
                </LinearLayout>

                <Button
                    android:backgroundTint="?attr/colorPrimaryVariant"
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addMatch"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <Button
                    android:backgroundTint="?attr/colorPrimaryVariant"
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/menu_cancel"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>